--- a/frontend/templates/playlist.html
+++ b/frontend/templates/playlist.html
@@ -70,7 +70,7 @@
                         <span class="material-icons">music_note</span>
                         <div class="song-info">
                             <div class="song-title">{{ song.title }}</div>
-                            <div class="song-duration">{{ (song.duration / 60)|int }}:{{ (song.duration % 60)|string|padstart(2, '0') }}</div>
+                            <div class="song-duration">{{ (song.duration / 60)|int }}:{{ (song.duration % 60)|string|zfill(2) }}</div>
                         </div>
                         <button class="btn-icon" onclick="removeSongFromPlaylist(event, {{ playlist.id }}, {{ song.id }})">
                             <span class="material-icons">remove</span>
@@ -123,7 +123,7 @@
                 <span class="material-icons">music_note</span>
                 <div class="song-info">
                     <div class="song-title">{{ song.title }}</div>
-                    <div class="song-duration">{{ (song.duration / 60)|int }}:{{ (song.duration % 60)|string|padstart(2, '0') }}</div>
+                    <div class="song-duration">{{ (song.duration / 60)|int }}:{{ (song.duration % 60)|string|zfill(2) }}</div>
                 </div>
                 <button class="btn-icon" onclick="addSongToPlaylist({{ playlist.id }}, {{ song.id }})">
                     <span class="material-icons">add</span>
