--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -21,6 +21,9 @@
         <p class="auth-link">
             Don't have an account? <a href="{{ url_for('register') }}">Sign Up</a>
         </p>
+        <p class="auth-link admin-link">
+            <a href="{{ url_for('admin_login') }}">Admin Login</a>
+        </p>
     </div>
 </div>
 {% endblock %} 
